update responsive file

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div
             class="col-6 col-lg-3 d-flex align-items-center justify-content-center header-right"
           >
-            <span class="logo-text"></span>
+          <img src="images/logo/logo.png" class="logo" alt="logo"/>
           </div>
           <nav
             class="col-lg-7 flex-grow-1 d-none d-xl-flex align-items-center navbar"
@@ -523,7 +523,7 @@
                       <div
                         class="d-flex align-items-center justify-content-center pb-2 pb-md-1 ps-1 mt-md-0 enter-btn"
                       >
-                        <p>ورود به نشر خوبی ها</p>
+                        <p>ورود به  مجله اینترنتی</p>
                       </div>
                     </a>
                   </div>
@@ -1240,8 +1240,8 @@
             </div>
           </div>
           <div class="col-12 flex-grow-1 main-video-title d-lg-none">
-            <p>سید علیرضا مدنی</p>
-            <h3>مراسم عزاداری شب شهادت امام جعفر صادق علیه السلام</h3>
+            <p>لورم ایپسوم متن ساختگی </p>
+            <h3>با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است</h3>
           </div>
           <ul class="col-12 col-lg-4 flex-grow-1 all-videos">
             <li>
